# lung-cancer-ct-ai

./: .gitignore  .pylidcrc  README.md  output.txt  pyproject.toml  pyrightconfig.json
.zed/: settings.json
app/: main.py
app/data/: augmentation.py  dataset.py  preprocessing.py  types.py
app/models/: unetr.py
app/utils/: loss.py  monkey_patches.py  patients.py
